--- a/autofill.html
+++ b/autofill.html
@@ -2,5 +2,6 @@
   <body>
     <input id="user-text-field" type="email" autocomplete="username"/>
     <input id="password-text-field" type="password" autocomplete="current-password"/>
+    <input id="single-factor-code-text-field" autocomplete="one-time-code"/>
   </body>
 </html>
